[package]
name = "cfrp"
version = "0.0.5"
authors         = ["Ryan Michael <kerinin@gmail.com>"]
description     = "Concurrent Functional Reactive Programming for Rust"
documentation   = "http://kerinin.github.io/cfrp-rs/cfrp/"
repository      = "https://github.com/kerinin/cfrp-rs"
readme          = "README.md"
keywords        = ["FRP", "concurrency", "threading", "gui"]
license         = "MIT"

[dependencies]
log = "0.3.6"
rand = "0.3.14"
env_logger = "0.3.3"
